Make sure the invisible no-sort indicator shrinks to 0 in tight layouts to give more room to the label

--- a/src/plugins/cloud-foundry/view/applications/list/table-view/table-view.scss
+++ b/src/plugins/cloud-foundry/view/applications/list/table-view/table-view.scss
@@ -34,10 +34,17 @@
           flex: 0 5 6px;
         }
 
-        .column-no-sort, .column-sorter-asc, .column-sorter-desc {
+        .column-sorter-asc, .column-sorter-desc {
           font-family: "helion-icons";
           flex: none;
         }
+
+        .column-no-sort {
+          font-family: "helion-icons";
+          flex: 0 5 auto;
+          overflow: hidden;
+        }
+
         .column-no-sort {
           opacity: 0;
         }
